--- a/configs/evaluation/default.yaml
+++ b/configs/evaluation/default.yaml
@@ -7,13 +7,13 @@
 # Evaluation frequency
 # ----------------------------------------------------------
 # Number of environment steps between evaluations
-eval_freq: 500
+eval_freq: 5_000
 
 # ----------------------------------------------------------
 # Evaluation episodes
 # ----------------------------------------------------------
 # Number of full episodes per evaluation phase
-eval_episodes: 5
+eval_episodes: 5 #used
 
 # ----------------------------------------------------------
 # Planning mode
@@ -27,7 +27,7 @@ deterministic: false
 # ----------------------------------------------------------
 # Rendering / video recording
 # ----------------------------------------------------------
-save_video: true
+save_video: false #used
 video_fps: 30
 video_format: mp4
 
