--- a/configs/model/medium.yaml
+++ b/configs/model/medium.yaml
@@ -9,34 +9,34 @@ model_size: medium
 # Representation & dynamics dimensions
 # ----------------------------------------------------------
 enc_dim: 256              # Encoder output dimension
-latent_dim: 512           # World-model latent state size
-mlp_dim: 512              # Hidden width for all MLP modules
+latent_dim: 512           # World-model latent state size #used in encoder #used in world model again
+mlp_dim: 512              # Hidden width for all MLP modules #used in world model
 
 # ----------------------------------------------------------
 # Convolutional encoder (pixel observations)
 # ----------------------------------------------------------
-num_channels: 32          # Base CNN channel count
-num_enc_layers: 2         # Number of convolutional layers
+num_channels: 32          # Base CNN channel count #used
+num_enc_layers: 2         # Number of convolutional layers 
 
 # ----------------------------------------------------------
 # Value ensemble (distributional)
 # ----------------------------------------------------------
-num_q: 5                  # Number of Q-function heads
-num_bins: 101             # Distributional value bins
+num_q: 5                  # Number of Q-function heads #used
+num_bins: 101             # Distributional value bins #used
 
 # ----------------------------------------------------------
 # SimNorm (latent normalization)
 # ----------------------------------------------------------
-simnorm_dim: 8             # Group size for SimNorm
+simnorm_dim: 8             # Group size for SimNorm #used
 
 # ----------------------------------------------------------
 # Regularization
 # ----------------------------------------------------------
-dropout: 0.01
+dropout: 0.01 #used
 
 # ----------------------------------------------------------
 # Policy prior / entropy control
 # ----------------------------------------------------------
-log_std_min: -10           # Minimum policy std (log scale)
-log_std_max: 2             # Maximum policy std (log scale)
+log_std_min: -10           # Minimum policy std (log scale) #used
+log_std_max: 2             # Maximum policy std (log scale) #used
 entropy_coef: 1e-4         # Entropy regularization weight
