--- a/configs/training/default.yaml
+++ b/configs/training/default.yaml
@@ -7,29 +7,28 @@
 # Total environment interaction
 # ----------------------------------------------------------
 # Number of environment steps collected during training
-steps: 10_000
+steps: 1_000
 
 # ----------------------------------------------------------
 # Replay buffer
 # ----------------------------------------------------------
-buffer_size: 10_000        # Maximum replay capacity #used
-batch_size: 128              # Samples per gradient update #used
-seed_steps: 5_000            # Initial random exploration steps #used
+buffer_size: 1_000        # Maximum replay capacity 
+batch_size: 128              # Samples per gradient update 
+seed_steps: 500            # Initial random exploration steps 
 
-# ----------------------------------------------------------
+# -------a---------------------------------------------------
 # Optimization
 # ----------------------------------------------------------
-lr: 3e-4                     # Base learning rate #used
-enc_lr_scale: 0.3            # Encoder LR multiplier
-grad_clip_norm: 20.0         # Global gradient norm clipping #used
+lr: 3e-4                     # Base learning rate 
+grad_clip_norm: 20.0         # Global gradient norm clipping 
 
 # ----------------------------------------------------------
 # Discounting & target networks
 # ----------------------------------------------------------
-discount: 0.99 #used
-vmin: -10.0                  # Distributional value support #used
-vmax: 10.0 #used
-tau: 0.01                    # Target network EMA rate #used
+discount: 0.99 
+vmin: -10.0                  # Distributional value support 
+vmax: 10.0 
+tau: 0.01                    # Target network EMA rate 
 
 # ----------------------------------------------------------
 # TD-MPC2 loss weights
@@ -43,20 +42,10 @@ termination_coef: 1.0        # Episode termination prediction
 # Temporal weighting (λ)
 # ----------------------------------------------------------
 # Controls multi-step rollout loss decay
-rho: 0.5 #used
+rho: 0.5 
 
 # ----------------------------------------------------------
 # Training schedule
 # ----------------------------------------------------------
-update_every: 1              # Env steps per update cycle #used
-updates_per_step: 1          # Gradient updates per env step #used
-
-# ----------------------------------------------------------
-# Performance
-# ----------------------------------------------------------
-compile: false                # torch.compile (PyTorch 2.x)
-
-# ----------------------------------------------------------
-# Logging
-# ----------------------------------------------------------
-log_interval: 100             # Training metrics logging interval
+update_every: 1              # Env steps per update cycle 
+updates_per_step: 1          # Gradient updates per env step 
