reward scaling during training

--- a/configs/env/crafter.yaml
+++ b/configs/env/crafter.yaml
@@ -15,6 +15,7 @@ obs_type: pixel
 # Agent does not observe full environment state
 partial_observable: true #not used
 
+reward_scale: 1.0    # Scale factor for environment rewards
 # ----------------------------------------------------------
 # Image preprocessing
 # ----------------------------------------------------------
