--- a/configs/env/gymnasium.yaml
+++ b/configs/env/gymnasium.yaml
@@ -47,7 +47,7 @@ episode_length: 500
 # ----------------------------------------------------------
 # Rendering
 # ----------------------------------------------------------
-render: false
+render: true
 render_mode: rgb_array
 
 # ----------------------------------------------------------
