--- a/configs/evaluation/default.yaml
+++ b/configs/evaluation/default.yaml
@@ -28,7 +28,7 @@ success_threshold: 1.0
 # ----------------------------------------------------------
 # Rendering / video recording
 # ----------------------------------------------------------
-save_video: false
+save_video: true
 video_fps: 30 #currently not used
 
 # ----------------------------------------------------------
