--- a/configs/env/minigrid.yaml
+++ b/configs/env/minigrid.yaml
@@ -49,7 +49,7 @@ episode_length: 100
 # Rendering
 # ----------------------------------------------------------
 render_mode: rgb_array       # human | rgb_array
-
+render: true
 # ----------------------------------------------------------
 # Action space
 # ----------------------------------------------------------
