--- a/configs/evaluation/default.yaml
+++ b/configs/evaluation/default.yaml
@@ -7,13 +7,13 @@
 # Evaluation frequency
 # ----------------------------------------------------------
 # Number of environment steps between evaluations
-eval_freq: 500
+eval_freq: 50000
 
 # ----------------------------------------------------------
 # Evaluation episodes
 # ----------------------------------------------------------
 # Number of full episodes per evaluation phase
-eval_episodes: 5
+eval_episodes: 10
 # ----------------------------------------------------------
 # Planning mode
 # ----------------------------------------------------------
@@ -21,14 +21,14 @@ eval_episodes: 5
 #   - disables exploration noise
 #   - uses mean action sequences
 #   - turns off stochastic sampling
-deterministic: false #currently not used
+deterministic: true #currently not used
 
-success_threshold: 1.0 
+success_threshold: 3500.0 
 
 # ----------------------------------------------------------
 # Rendering / video recording
 # ----------------------------------------------------------
-save_video: true
+save_video: false
 video_fps: 30 #currently not used
 
 # ----------------------------------------------------------
