--- a/configs/evaluation/default.yaml
+++ b/configs/evaluation/default.yaml
@@ -23,12 +23,12 @@ eval_episodes: 10
 #   - turns off stochastic sampling
 deterministic: true #currently not used
 
-success_threshold: 3500.0 
+success_threshold: 1
 
 # ----------------------------------------------------------
 # Rendering / video recording
 # ----------------------------------------------------------
-save_video: false
+save_video: true
 video_fps: 30 #currently not used
 
 # ----------------------------------------------------------
